# mirea-haskell-lectures

artemy-urodovskikh/: Challenge.hs
artemy-urodovskikh/HelloWorld/: Main.hs  helloworld.cabal  stack.yaml
artemy-urodovskikh/HelloWorld/.stack-work/install/65995373/flag-cache/: helloworld-0.0.1-iyEAkzEHv4COHJm8vXNp5
artemy-urodovskikh/HelloWorld/.stack-work/install/65995373/pkgdb/: helloworld-0.0.1-iyEAkzEHv4COHJm8vXNp5.conf  package.cache
artemy-urodovskikh/HelloWorld/src/: HelloWorld.hs
