name : helloworld
version: 0.0.1
build-type: Simple
cabal-version: >=1.18

library
 exposed-modules: HelloWorld
 build-depends: 
   base >=4.9 && <4.10
 default-language: Haskell2010
 hs-source-dirs: src
 ghc-options: -Wall

executable helloworld
 main-is: Main.hs
 build-depends: base >=4.9 && <4.10, directory
 default-language: Haskell2010

executable tree
 main-is: Main.hs
 default-language: Haskell2010
 build-depends: 
  base >= 4.7 && <5, directory